# sha1_rs_vs_openssl

./: Cargo.toml  README.md
benches/: sha1.rs
