[package]
name = "sha1_rs_vs_openssl"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10"
rand = "0.8"
sha_1 = { package = "sha-1", version = "0.9" }
sha1 = "0.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sha1"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
incremental = false
debug = false
overflow-checks = false
panic = "abort"
